--- a/styles/product/page.module.scss
+++ b/styles/product/page.module.scss
@@ -144,7 +144,7 @@
 
   img {
     width: 100%;
-    height: 400px;
+    // height: 400px;
     max-width: 100%;
     object-fit: cover;
     transition: all 50ms linear;
