--- a/styles/product/cart.module.scss
+++ b/styles/product/cart.module.scss
@@ -1,6 +1,7 @@
 .inputbox input {
   border: 1px solid #d3ced2;
-  padding: 5px 10px;
+  padding: 5px 5px;
+  margin-right: 8px;
 }
 span.value {
   font-size: 16px !important;
@@ -8,9 +9,6 @@ span.value {
 }
 .inputbox input::placeholder {
   color: #d3ced2;
-}
-.mwfull {
-  width: 28%;
 }
 span.shippingdetail1 {
   font-size: 15px;
@@ -589,9 +587,7 @@ ul.formdesign {
 @media (max-width:500px) {
   .inputbox button { 
     padding: 7px 5px 6px 5px !important;
-    margin-left: 3px;
-    position: relative;
-    top: 0px;
+    margin-left: 0px;
   }
   .inputbox1 button {
     padding: 6px 110px !important;
@@ -602,5 +598,11 @@ ul.formdesign {
   .mwfull {
     width: 100%;
     margin-top: 15px;
+  }
+}
+
+@media (max-width:1200px) {
+  .mwfull { 
+    width: 100%;
   }
 }
