--- a/styles/product/page.module.scss
+++ b/styles/product/page.module.scss
@@ -329,14 +329,14 @@
     margin-top: 25px;
   }
   .addToBasket {
-    padding: 10px 0 10px 0 !important;
-    width: 115px;
-    height: 50px;
+    padding: 7px 2px 10px 3px !important;
+    width: 107px;
+    height: 45px;
     font-size: 10px !important;
   }
   .size-guide {
-    height: 50px !important;
-    width: 125px;
+    height: 45px !important;
+    width: 114px;
     font-size: 10px !important;
   }
   .year_warranty {
@@ -367,6 +367,18 @@
     margin-left: 5px;
     padding: 12px 15px 12px 18px;
     font-size: 10px;
+  }
+  .grid {
+    grid-template-columns: 1fr;
+  }
+  .coupon {
+    width: auto !important;
+  }
+  .year_warranty {
+    display: none;
+  }
+  .image-lists {
+    display: none;
   }
 }
 
@@ -460,6 +472,7 @@
   .trust_img {
     text-align: center;
   }
+
 }
 
 @media screen and (max-width: 500px) {
