changes from krishna  end

--- a/styles/cart.module.scss
+++ b/styles/cart.module.scss
@@ -627,4 +627,10 @@ span.price-sums1 {
    .summary-container { 
     max-width: none;
    }
+   .price-summary h5 {
+    width: auto;
+   }
+   .price-summary1 h5 {
+    width: auto;
+   }
 }
