--- a/styles/product/cart.module.scss
+++ b/styles/product/cart.module.scss
@@ -590,7 +590,7 @@ ul.formdesign {
     margin-left: 0px;
   }
   .inputbox1 button {
-    padding: 6px 110px !important;
+    padding: 6px 95px !important;
     position: relative;
     top: 5px;
     margin-bottom: 8px;
@@ -598,6 +598,9 @@ ul.formdesign {
   .mwfull {
     width: 100%;
     margin-top: 15px;
+  }
+  .inputbox input { 
+    width: 200px;
   }
 }
 
