--- a/styles/product/page.module.scss
+++ b/styles/product/page.module.scss
@@ -1,11 +1,10 @@
 // New Product Page
 
 .grid {
-  display: grid;
-  // grid-template-columns: repeat(2,1fr);
-  grid-template-columns: 1fr 1fr;
-  padding: 20px 0px;
   gap: 3rem;
+  display: grid;
+  padding: 20px 0px;
+  grid-template-columns: 1fr 1fr;
 }
 .desctab3 p {
   margin-bottom: 8px;
@@ -238,11 +237,14 @@
           padding: 10px;
           border: 2px solid #e6e6e6;
           font-size: 14px;
-        
+
           -webkit-appearance: none !important;
           -moz-appearance: none;
           -ms-appearance: none !important;
-         
+
+          background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' width='24' height='24'%3E%3Cpath fill='none' d='M0 0h24v24H0z'/%3E%3Cpath d='M12 13.172l4.95-4.95 1.414 1.414L12 16 5.636 9.636 7.05 8.222z'/%3E%3C/svg%3E")
+            99% / 0% no-repeat #eee;
+          background-size: 4.5%;
         }
       }
     }
@@ -492,7 +494,6 @@
   .trust_img {
     text-align: center;
   }
-
 }
 
 @media screen and (max-width: 500px) {
