--- a/styles/product/page.module.scss
+++ b/styles/product/page.module.scss
@@ -229,6 +229,7 @@
       .dropdown {
         display: flex;
         align-items: center;
+        position: relative;
         select {
           outline: none;
           flex: 1 1;
@@ -245,20 +246,6 @@
          
         }
       }
-    }
-    .select-size .dropdown select::after {
-      content: "▼";
-      position: absolute;
-      top: 0;
-      right: 0;
-      padding: 0 1em;
-      background: #2b2e2e;
-      cursor: pointer;
-      pointer-events: none;
-      transition: 0.25s all ease;
-      height: 100px;
-      width: 100px;
-      z-index: 1001010000000;
     }
     .select-size {
       label {
