--- a/styles/product.module.scss
+++ b/styles/product.module.scss
@@ -213,3 +213,72 @@ ul.klarnaimage {
     }
   }
 }
+
+.size-parent {
+  padding: 40px;
+  max-width: 800px;
+  justify-content: center;
+  margin: 0 auto;
+  position: relative;
+  .size-table {
+    display: flex;
+    justify-content: center;
+    background-color: #fff;
+    padding: 20px;
+    table {
+      width: 100%;
+      // height: 100vh;
+
+      tr {
+        th {
+          font-weight: 500;
+          border: 1px solid #e5e5e5;
+          padding-left: 10px;
+          padding: 10px 0 10px 10px;
+        }
+        td {
+          padding-bottom: 10px;
+          font-size: 14px;
+          border: 1px solid #e5e5e5;
+          padding-left: 10px;
+          line-height: 2;
+        }
+      }
+    }
+  }
+}
+
+.bottom-table {
+  justify-content: center;
+  font-size: 14px;
+  background: #fff;
+  padding: 20px;
+  table {
+    flex: 0.45;
+    tbody {
+      tr {
+        th {
+          border: 1px solid #e5e5e5;
+          padding: 15px 0 15px 10px;
+        }
+        td {
+          border: 1px solid #e5e5e5;
+          padding: 15px 0 15px 10px;
+        }
+      }
+    }
+  }
+}
+
+.cross-btn {
+  right: 0;
+  position: absolute;
+  height: 40px;
+  width: 40px;
+  background: #020202;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 25px;
+  color: #fff;
+}
