--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -1020,6 +1020,9 @@ section.qualityproducts {
   .section2 .mwfull {
     width: 100%;
 }
+.section2image button { 
+  font-size: 14px;
+}
 .complementcontent h3 { 
   text-align: center;
 }
@@ -1028,10 +1031,11 @@ section.qualityproducts {
 }
 .bestsellingproduct button {
   font-size: 15px;
+  padding: 12px 45px 12px 45px;
 }
 .complementcontent1 button { 
   padding: 16px 10px 15px 10px !important;
-  left: 92px !important;
+  left: 70px !important;
   top: -15px !important;
 }
 .dreambedcontent h3 {
@@ -1113,7 +1117,7 @@ section.qualityproducts {
 }
 @media (max-width: 1200px) {
   .complementcontent1 button {
-    left: 40px;
+    left: 10px;
     top: 40px;
     padding: 15px 16px 15px 16px;
   }
@@ -1126,5 +1130,12 @@ section.qualityproducts {
   }
   .complementcontent1 img { 
     display: none;
+  }
+  .section2image button {
+    font-size: 14px;
+  }
+  .bestsellingproduct button {
+    padding: 12px 40px 12px 40px;
+    font-size: 15px;
   }
 }
