--- a/styles/layout.module.scss
+++ b/styles/layout.module.scss
@@ -528,6 +528,9 @@ $tab: 768px;
   .nav-container .nav-links .link a {
     font-size: 16px;
   }
+  .logo {
+    justify-content: end !important;
+  }
 }
 @media (max-width:991px) {
   .nav-container .nav-links .link a {
@@ -556,5 +559,8 @@ $tab: 768px;
   }
   .controls ul li:nth-child(1){
     display: none;
+  }
+  .logo {
+    justify-content: center;
   }
 }
