--- a/styles/divanbedbirmingham/divanbedbirmingham.module.scss
+++ b/styles/divanbedbirmingham/divanbedbirmingham.module.scss
@@ -101,6 +101,7 @@
     font-size: 18px;
     font-weight: 400;
     color: #fff;
+    line-height: 28px;
 }
 .section23 {
     padding: 60px;
@@ -146,7 +147,16 @@
 .accordion1 ul li {
     margin-left: 8px;
     color: #7a7a7a;
-    font-weight: 600;
+    font-weight: 500;
+}
+.accordioncontent p {
+    color: #7A7A7A;
+    font-size: 15px;
+}
+.accordion1 ul li:nth-child(2) {
+    font-size: 18px;
+    padding-top: 10px;
+    cursor: pointer;
 }
 .accordion1 ul {
     display: flex;
@@ -230,4 +240,79 @@
 }
 .Birminghamsection3 {
     margin-bottom: 60px;
+}
+.relatedsection p a {
+    color: #0170B9 !important;
+}
+.relatedsection p a:hover {
+    color: #000 !important;
+}
+@media (max-width:500px) {
+    .Birminghamsection .mwfull {
+        width: 100%;
+    }
+    .section2 ul { 
+        flex-wrap: wrap;
+        margin: 0 auto;
+        display: block;
+        text-align: center;
+    }
+    .Birminghamsection2 .mwfull {
+        width: 100%;
+    }
+    .section23 { 
+        padding: 20px 5px;
+    }
+    .Birminghamsection2 .mwfulles {
+        width: 100%;
+    }
+    .section24 { 
+        padding: 20px 5px;
+    }
+    .contactsection2 { 
+        padding-bottom: 30px !important;
+        padding: 0;
+    }
+    .section21  {
+        margin-bottom: 30px;
+    }
+    .section21:nth-child(1)  {
+        margin-top: 25px;
+    }
+    .contact1 { 
+        padding: 15px;
+    }
+    .Birminghamsection { 
+        padding: 50px 0px 0px 0px;
+    }
+}
+@media (max-width:1200px) {
+    .contactform form input { 
+        margin-bottom: 30px;
+    }
+    .section2 ul li {
+        margin-left: -20px;
+        text-align: center;
+    }
+    .contactsection2 .mwfulles {
+        width: 100%;
+    }
+    .Birminghamsection2 .mwfull {
+        width: 100%;
+    }
+    .Birminghamsection2 .mwfulles {
+        width: 100%;
+    }
+    .contact1 { 
+        padding: 2px 0px 30px;
+    }
+    .contactsection2 { 
+        padding: 20px;
+    }
+    .section23 {
+        padding: 20px;
+    }
+    .section24 {
+        padding: 20px;
+    }
 }
